Add demo animation

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Josef | Drawing by Neural Networks</title>
-    <link rel="image_src" href="http://fatiherikli.github.io/voxel/static/example.jpg" />
+    <link rel="image_src" href="http://fatiherikli.github.io/josef/static/example.PNG" />
     <meta name="og:description" content="A robot who tries to learn how to draw." />
   </head>
   <body>
