--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>Josef | Drawing by Neural Networks</title>
     <link rel="image_src" href="http://fatiherikli.github.io/josef/static/example.PNG" />
     <meta name="og:description" content="A robot who tries to learn how to draw." />
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P6KKLCD');</script>
+<!-- End Google Tag Manager -->
   </head>
   <body>
     <div id='root'>
